src/test/ui/asm/issue-51431.stderr
error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/issue-51431.rs:8:32
   |
LL |         asm! {"mov $0,$1"::"0"("bx"),"1"(0x00)}
   |                                ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0669`.
